Cleaning up and starting over